--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "glob-parent": ">=5.1.2"
   },
   "eslintConfig": {
     "root": true,
